--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,13 @@ jobs:
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
-          command: py.test --cov-report term --cov-report xml:coverage.xml --cov=great_assertions
+          command: |
+            mkdir test-results
+            py.test --junitxml=test-results/junit.xml --cov-report term --cov-report xml:coverage.xml --cov=great_assertions
+
       - store_test_results:
-          path: coverage.xml
+          path: test-results
+
+      - store_artifacts:
+          path: test-results
+
