--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
           # This assumes pytest is installed via the install-package step above
           command: |
             mkdir test-results
-            py.test --junitxml=test-results/junit.xml --cov-report term --cov-report xml:coverage.xml --cov=great_assertions
+            py.test --junitxml=test-results/junit.xml --cov-report term --cov-report xml:test-results/coverage.xml --cov=great_assertions
 
       - store_test_results:
           path: test-results
