--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -20,7 +20,7 @@ jobs:
         pip install pytest
         pip install pytest-cov
         pip install -r test-requirements.txt
-        py.test --cov-report term --cov-report xml:coverage/coverage.xml --cov=great_assertions
+        py.test --cov-report term --cov-report xml:.coverage/reports/coverage.xml --cov=great_assertions
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
       with:
