--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -26,6 +26,6 @@ jobs:
       uses: codecov/codecov-action@v2
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        directory: ./coverage/reports/
+        files: coverage.xml
         env_vars: OS,PYTHON
         fail_ci_if_error: true
