ignore init.py flakes

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 max-line-length = 200
-exclude = tests/*,docs/*
+exclude = tests/*,docs/*,__init__.py
 extend-ignore = D202
 
 [coverage:run]
