messing with python packages grr

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,5 +3,45 @@ max-line-length = 200
 exclude = tests/*,docs/*,__init__.py
 extend-ignore = D202
 
+[metadata]
+name = great-assertions
+description = Lightweight assertions inspired by the great-expectations library
+long_description = file: README.rst, LICENSE.rst
+version = 0.0.44
+author = Sam Treweek
+author_email = samtreweek@gmail.com
+project_urls =
+    Source code = https://github.com/serialbandicoot/great-assertions
+    Issue tracker = https://github.com/serialbandicoot/great-assertions/issues
+license = MIT
+keywords = timezone
+classifiers =
+    Development Status :: 5 - Production/Stable
+    License :: OSI Approved :: MIT License
+    Operating System :: Microsoft :: Windows
+    Operating System :: Unix
+    Operating System :: MacOS :: MacOS X
+    Programming Language :: Python :: 3.7
+
+[options]
+packages = find:
+python_requires = >= 3.6
+zip_safe = True
+
+[options.packages.find]
+include = great_assertions
+
+[options.extras_require]
+test =
+    pytest >= 4.3
+devenv =
+    pytest-cov
+    black
+    pyroma
+    zest.releaser
+
+[zest.releaser]
+create-wheel = yes
+
 [coverage:run]
 omit=setup.py
