mv files/folders around

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,9 +7,11 @@ extend-ignore = D202
 name = great-assertions
 description = Lightweight assertions inspired by the great-expectations library
 long_description = file: README.rst, LICENSE.rst
-version = 0.0.45
+long_description_content_type = text/x-rst
+version = 0.0.46
 author = Sam Treweek
 author_email = samtreweek@gmail.com
+url = https://github.com/serialbandicoot/great-assertions
 project_urls =
     Source code = https://github.com/serialbandicoot/great-assertions
     Issue tracker = https://github.com/serialbandicoot/great-assertions/issues
@@ -29,7 +31,7 @@ python_requires = >= 3.6
 zip_safe = True
 
 [options.packages.find]
-include = great_assertions
+include = src
 
 [options.extras_require]
 test =
