--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ name = great-assertions
 description = Lightweight assertions inspired by the great-expectations library
 long_description = file: README.rst, LICENSE.rst
 long_description_content_type = text/x-rst
-version = 0.0.46
+version = 0.0.49
 author = Sam Treweek
 author_email = samtreweek@gmail.com
 url = https://github.com/serialbandicoot/great-assertions
@@ -29,6 +29,7 @@ classifiers =
 packages = find:
 python_requires = >= 3.6
 zip_safe = True
+py_modules = great_assertions
 
 [options.packages.find]
 include = src
