resolve regex using toPandas

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 max-line-length = 200
 exclude = tests/*,docs/*,__init__.py
-extend-ignore = D202
+extend-ignore = D202,N802
 
 [metadata]
 name = great-assertions
