--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ name = great-assertions
 description = Lightweight assertions inspired by the great-expectations library
 long_description = file: README.rst, LICENSE.rst
 long_description_content_type = text/x-rst
-version = 0.0.59
+version = 0.0.60
 author = Sam Treweek
 author_email = samtreweek@gmail.com
 url = https://github.com/serialbandicoot/great-assertions
@@ -32,7 +32,7 @@ zip_safe = True
 py_modules = great_assertions
 
 [options.packages.find]
-include = src
+include = src, monitor
 
 [options.extras_require]
 test =
@@ -51,3 +51,7 @@ omit=setup.py
 
 [tool.black]
 line-length = 120
+
+[options.entry_points]
+console_scripts =
+  great_assertions_monitor = monitor.run:cli
