rm old approach

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ zip_safe = True
 py_modules = great_assertions
 
 [options.packages.find]
-include = src, monitor
+include = src
 
 [options.extras_require]
 test =
@@ -54,4 +54,4 @@ line-length = 120
 
 [options.entry_points]
 console_scripts =
-  great_assertions_monitor = monitor.run:cli
+  great_assertions_monitor = src.monitor.run:cli
