--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ name = great-assertions
 description = Lightweight assertions inspired by the great-expectations library
 long_description = file: README.rst, LICENSE.rst
 long_description_content_type = text/x-rst
-version = 0.0.65
+version = 0.0.66
 author = Sam Treweek
 author_email = samtreweek@gmail.com
 url = https://github.com/serialbandicoot/great-assertions
@@ -47,7 +47,7 @@ devenv =
 create-wheel = yes
 
 [coverage:run]
-omit=setup.py
+omit=setup.py, *tests*
 
 [tool.black]
 line-length = 120
